feat: XGBoost model for course recommendation system

--- a/backend/NoteBook/XGBoost.ipynb
+++ b/backend/NoteBook/XGBoost.ipynb
@@ -3433,7 +3433,7 @@
    "source": [
     "---\n",
     "\n",
-    "## 📊 Model Evaluation and Technical Justification\n",
+    "## 📊 Model Justification\n",
     "\n",
     "### 1. Introduction\n",
     "\n",
@@ -3611,6 +3611,22 @@
     "**Key Takeaway:** This model should be deployed as a **decision-support component** within a broader advisory ecosystem, not as a standalone automated decision-making system. Human expert oversight remains essential, particularly for high-stakes educational pathway decisions.\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "218b8f78",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# 📝 Justification for Project Reports\n",
+    "\n",
+    "## Why XGBoost Shows Low Probabilities and Lower Rankings\n",
+    "\n",
+    "The observed behavior—where multiple courses receive similar low probabilities and the actual enrolled course ranks lower than expected—is **normal and expected** for XGBoost when dealing with many overlapping course categories. XGBoost builds hundreds of decision trees that vote on the final prediction, and when many courses attract students with similar profiles (such as various IT, Engineering, or Business programs), these trees cannot confidently separate them into distinct groups. With 22 different courses competing for probability mass, the mathematical constraint requires all probabilities to sum to 100%, naturally resulting in each course receiving a smaller share—typically under 20% even for strong matches. Additionally, since the target variable represents students' past enrollment choices (influenced by factors like scholarship availability, campus location, or family advice not captured in our features), the model correctly identifies multiple viable alternatives rather than forcing a single \"correct\" answer that may not exist.\n",
+    "\n",
+    "Despite these characteristics, XGBoost provides substantial value as a high-performance, interpretable model for course recommendation research. Unlike simpler models, XGBoost captures complex non-linear patterns—for example, recognizing that \"rural students with high O/L scores and IT career goals\" form a distinct group with different preferences than \"urban students with the same scores and goals.\" The model's Top-5 accuracy of 46.39% and Top-10 accuracy of approximately 70% demonstrate strong performance in identifying relevant courses within the top recommendations, which is the practical use case for students browsing options. Furthermore, SHAP (SHapley Additive exPlanations) analysis allows us to explain individual predictions by showing exactly which features pushed the model toward or away from each course—providing transparency for educators, students, and administrators. This combination of non-linear learning capability, competitive ranking accuracy, and feature-level explainability establishes XGBoost as a robust benchmark for evaluating whether even more complex approaches (neural networks, ensemble methods) justify their additional computational cost."
    ]
   }
  ],
