feat: Implement career domain filtering and explanations in recommendation system

--- a/backend/NoteBook/RandomForest.ipynb
+++ b/backend/NoteBook/RandomForest.ipynb
@@ -1518,412 +1518,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53114545",
-   "metadata": {},
-   "source": [
-    "## 16. Conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "32720232",
-   "metadata": {},
-   "source": [
-    "## 15. Save Model Artifacts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40f8d9a2",
-   "metadata": {},
-   "source": [
-    "## 14. Strengths and Limitations of Random Forest"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cef26763",
-   "metadata": {},
-   "source": [
-    "## 13. Model Comparison with Other Approaches"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f77cb3b6",
-   "metadata": {},
-   "source": [
-    "## 12. Top-K Accuracy Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c8c8989",
-   "metadata": {},
-   "source": [
-    "## 11. Explainability: Interpret Recommendations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "608d338f",
-   "metadata": {},
-   "source": [
-    "## 10. Feature Importance Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ecb81d25",
-   "metadata": {},
-   "source": [
-    "## 9. Test Case: Generate Recommendations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "348bd909",
-   "metadata": {},
-   "source": [
-    "## 8. Top-K Recommendation Function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "df68936e",
-   "metadata": {},
-   "source": [
-    "## 7. Model Evaluation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9ebe736f",
-   "metadata": {},
-   "source": [
-    "## 6. Train Random Forest Model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4b4109f7",
-   "metadata": {},
-   "source": [
-    "## 5. Handle Class Imbalance & Create Train/Test Split"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a1c6240c",
-   "metadata": {},
-   "source": [
-    "## 4. Encode Categorical Variables"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "db7476ba",
-   "metadata": {},
-   "source": [
-    "## 3. Data Preprocessing & Feature Engineering"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "58194157",
-   "metadata": {},
-   "source": [
-    "## 2. Load Dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0ef8f245",
-   "metadata": {},
-   "source": [
-    "## 1. Import Required Libraries"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b3c54359",
-   "metadata": {},
-   "source": [
-    "## 17. Academic Justification: Random Forest for Course Recommendation\n",
-    "\n",
-    "### Introduction\n",
-    "\n",
-    "This section provides a comprehensive academic justification for using **Random Forest** as a course recommendation model in this research. While Random Forest achieves modest top-1 test accuracy (approximately 5-10%), it demonstrates significant value through its Top-K recommendation performance, feature importance transparency, and robustness to overfitting. This justification explains the expected behavior, strengths, limitations, and strategic value of Random Forest in educational recommender systems.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Purpose of Random Forest in This Research\n",
-    "\n",
-    "**Random Forest was employed as a robust ensemble-based classical machine learning model to:**\n",
-    "\n",
-    "1. **Capture Non-linear Relationships**: Unlike Logistic Regression, Random Forest can model complex, non-linear interactions between student features (e.g., how Location, Career Goal, and A/L Stream interact to influence course choice).\n",
-    "\n",
-    "2. **Provide Baseline Ensemble Performance**: Serve as a middle-ground comparison between simpler models (KNN, Logistic Regression) and more sophisticated boosting methods (XGBoost).\n",
-    "\n",
-    "3. **Deliver Feature Importance Transparency**: Offer interpretable feature importance scores derived from Gini impurity, helping educators understand which factors most influence course recommendations.\n",
-    "\n",
-    "4. **Handle Mixed Data Naturally**: Process both categorical and numerical features without requiring feature scaling or extensive preprocessing.\n",
-    "\n",
-    "5. **Reduce Overfitting Through Bagging**: Use bootstrap aggregation (bagging) to create an ensemble of 200 decision trees, each trained on random subsets of data and features, reducing variance compared to single decision trees.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Analysis of Model Behavior\n",
-    "\n",
-    "#### Test Accuracy (~5-10%)\n",
-    "\n",
-    "The relatively low top-1 test accuracy is **expected behavior** for Random Forest in multiclass educational recommendation with 22 courses. Key factors include:\n",
-    "\n",
-    "1. **Ensemble Voting Mechanism**:\n",
-    "   - Random Forest aggregates votes from 200 decision trees\n",
-    "   - Each tree may vote for a different course based on the features it considers\n",
-    "   - Final prediction = majority vote (argmax of vote counts)\n",
-    "   - With 22 classes, vote fragmentation naturally occurs\n",
-    "\n",
-    "2. **Probability Distribution**:\n",
-    "   - `predict_proba()` returns normalized vote fractions\n",
-    "   - Example: If tree votes are distributed as [40, 35, 30, 25, ...], probabilities become [0.20, 0.175, 0.15, 0.125, ...]\n",
-    "   - The \"winning\" class may have only 20% probability\n",
-    "   - Multiple courses receive substantial vote shares\n",
-    "\n",
-    "3. **Moderate Training Accuracy (~55%)**:\n",
-    "   - Hyperparameters like `max_depth=15` and `min_samples_split=5` intentionally limit tree complexity\n",
-    "   - This prevents overfitting but caps training performance\n",
-    "   - Gap between train (55%) and test (5-10%) indicates some overfitting, but regularization helps\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Reasons for Probability Distribution Patterns\n",
-    "\n",
-    "#### 1. Bootstrap Aggregation (Bagging)\n",
-    "\n",
-    "**Mechanism**:\n",
-    "- Each of the 200 trees is trained on a bootstrapped sample (random sampling with replacement)\n",
-    "- Different trees see different subsets of training data\n",
-    "- Trees develop diverse decision boundaries\n",
-    "\n",
-    "**Impact on Predictions**:\n",
-    "- Trees \"disagree\" on predictions due to seeing different training patterns\n",
-    "- Votes spread across multiple courses\n",
-    "- Final probability = fraction of trees voting for each course\n",
-    "\n",
-    "#### 2. Feature Randomness (`max_features='sqrt'`)\n",
-    "\n",
-    "**Mechanism**:\n",
-    "- At each split, only √18 ≈ 4 features are considered\n",
-    "- Different trees use different feature subsets\n",
-    "- Encourages diversity in tree structures\n",
-    "\n",
-    "**Impact**:\n",
-    "- Tree A might split on Location → Career Goal → Age\n",
-    "- Tree B might split on A/L Stream → Income → Availability\n",
-    "- Both valid but lead to different course predictions\n",
-    "\n",
-    "#### 3. Limited Tree Depth\n",
-    "\n",
-    "**Hyperparameter**: `max_depth=15`\n",
-    "\n",
-    "**Impact**:\n",
-    "- Prevents trees from memorizing training data\n",
-    "- Forces trees to capture general patterns only\n",
-    "- Reduces per-tree accuracy but improves ensemble generalization\n",
-    "- Trade-off: Lower overfitting but more vote fragmentation\n",
-    "\n",
-    "#### 4. Class Imbalance Handling\n",
-    "\n",
-    "**Hyperparameter**: `class_weight='balanced'`\n",
-    "\n",
-    "**Impact**:\n",
-    "- Adjusts sample weights inversely proportional to class frequency\n",
-    "- Rare courses get higher weights during training\n",
-    "- Trees more likely to predict rare courses\n",
-    "- Spreads votes across all 22 classes more evenly\n",
-    "\n",
-    "#### 5. Dataset Size and Complexity\n",
-    "\n",
-    "**Training Samples**: 513 students across 22 courses\n",
-    "\n",
-    "**Challenge**:\n",
-    "- Approximately 23 samples per course on average\n",
-    "- With 18 features, data is sparse in 18-dimensional space\n",
-    "- Trees struggle to find definitive patterns\n",
-    "- Many students share similar features but chose different courses\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Limitations of Random Forest\n",
-    "\n",
-    "#### 1. Black-Box Ensemble\n",
-    "\n",
-    "**Issue**: While individual trees are interpretable, ensembling 200 trees makes tracing specific predictions difficult.\n",
-    "\n",
-    "**Mitigation**: Use feature importance scores to explain overall model behavior.\n",
-    "\n",
-    "#### 2. Probability Calibration\n",
-    "\n",
-    "**Issue**: Vote fractions from Random Forest are not true probabilities—they reflect tree agreement, not calibrated confidence.\n",
-    "\n",
-    "**Evidence**: Predicted probabilities often cluster in narrow ranges (e.g., 0.05–0.15), unlike well-calibrated models.\n",
-    "\n",
-    "**Impact**: Cannot use probability thresholds reliably for decision-making.\n",
-    "\n",
-    "#### 3. Computational Cost\n",
-    "\n",
-    "**Issue**: Training 200 trees and querying all of them for predictions is memory-intensive and slower than simpler models.\n",
-    "\n",
-    "**Trade-off**: Better generalization but higher inference latency.\n",
-    "\n",
-    "#### 4. Extrapolation Limits\n",
-    "\n",
-    "**Issue**: Random Forest cannot predict outside the range of training data.\n",
-    "\n",
-    "**Example**: If no student with \"Above LKR 200,000\" income enrolled in Course X during training, the model won't recommend Course X for such students.\n",
-    "\n",
-    "#### 5. Overfitting Despite Regularization\n",
-    "\n",
-    "**Evidence**: 55% training accuracy vs. 5–10% test accuracy indicates some overfitting.\n",
-    "\n",
-    "**Cause**: Even with `max_depth` and `min_samples_split`, small dataset allows trees to learn noise.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Value of Random Forest Despite Limitations\n",
-    "\n",
-    "#### 1. Top-K Recommendation Performance\n",
-    "\n",
-    "**Key Insight**: Random Forest excels at **ranking multiple suitable courses**, not just predicting one course.\n",
-    "\n",
-    "**Typical Performance**:\n",
-    "- Top-1 Accuracy: ~5–10%\n",
-    "- Top-5 Accuracy: ~40–50%\n",
-    "- Top-10 Accuracy: ~65–75%\n",
-    "\n",
-    "**Practical Value**:\n",
-    "- Students explore multiple relevant options\n",
-    "- Captures diverse interests through vote distribution\n",
-    "- More realistic than forcing single-course predictions\n",
-    "\n",
-    "#### 2. Feature Importance Transparency\n",
-    "\n",
-    "**Mechanism**: Random Forest measures feature importance using **mean decrease in Gini impurity** across all trees.\n",
-    "\n",
-    "**Top Features Identified**:\n",
-    "1. Location? (~40% importance)\n",
-    "2. Career Goal? (~15% importance)\n",
-    "3. Monthly Income (~10% importance)\n",
-    "4. Age? (~10% importance)\n",
-    "5. A/L Stream? (~8% importance)\n",
-    "\n",
-    "**Educational Insights**:\n",
-    "- Geographic location strongly influences course choice (campus availability, local demand)\n",
-    "- Career aspirations are secondary but important\n",
-    "- Financial capacity affects course selection\n",
-    "- Academic background (A/L stream) plays a moderate role\n",
-    "\n",
-    "#### 3. Robustness to Outliers\n",
-    "\n",
-    "**Advantage**: Tree-based splits are less affected by extreme values than linear models.\n",
-    "\n",
-    "**Example**: A student with unusually high income or rare A/L combination doesn't skew the entire model.\n",
-    "\n",
-    "#### 4. Handles Missing Data Well\n",
-    "\n",
-    "**Mechanism**: Trees can split on alternative features when data is missing.\n",
-    "\n",
-    "**Value**: Real-world datasets often have incomplete surveys; Random Forest degrades gracefully.\n",
-    "\n",
-    "#### 5. No Feature Scaling Required\n",
-    "\n",
-    "**Advantage**: Unlike KNN or neural networks, Random Forest doesn't require normalization.\n",
-    "\n",
-    "**Efficiency**: Saves preprocessing steps and reduces pipeline complexity.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Recommended Improvements\n",
-    "\n",
-    "#### 1. Hyperparameter Tuning\n",
-    "\n",
-    "**Current Settings**: `n_estimators=200`, `max_depth=15`, `min_samples_split=5`\n",
-    "\n",
-    "**Suggestions**:\n",
-    "- Use **GridSearchCV** or **RandomizedSearchCV** to find optimal values\n",
-    "- Test `max_depth` in range [10, 20, 30]\n",
-    "- Experiment with `min_samples_leaf` for regularization\n",
-    "\n",
-    "#### 2. Feature Engineering\n",
-    "\n",
-    "**Current Features**: 18 raw + 5 engineered (O/L aggregates)\n",
-    "\n",
-    "**Suggestions**:\n",
-    "- Create interaction features (e.g., Location × Career Goal)\n",
-    "- Add polynomial features for Age and Income\n",
-    "- Encode A/L subject combinations as feature crosses\n",
-    "\n",
-    "#### 3. Ensemble Stacking\n",
-    "\n",
-    "**Idea**: Combine Random Forest with XGBoost and Logistic Regression using a meta-learner.\n",
-    "\n",
-    "**Benefit**: Leverage strengths of multiple models for better predictions.\n",
-    "\n",
-    "#### 4. Class Weighting Optimization\n",
-    "\n",
-    "**Current**: `class_weight='balanced'` (uniform adjustment)\n",
-    "\n",
-    "**Suggestion**: Manually tune class weights based on business priorities (e.g., boost undersubscribed courses).\n",
-    "\n",
-    "#### 5. Probability Calibration\n",
-    "\n",
-    "**Method**: Apply **Platt scaling** or **isotonic regression** to calibrate `predict_proba()` outputs.\n",
-    "\n",
-    "**Benefit**: Convert vote fractions into true probability estimates.\n",
-    "\n",
-    "#### 6. SHAP Values for Individual Explanations\n",
-    "\n",
-    "**Tool**: Use **SHAP (SHapley Additive exPlanations)** to explain individual predictions.\n",
-    "\n",
-    "**Value**: Show students *why* specific courses were recommended (e.g., \"Recommended due to your Location and Career Goal\").\n",
-    "\n",
-    "#### 7. Increase Dataset Size\n",
-    "\n",
-    "**Current**: 642 samples after filtering\n",
-    "\n",
-    "**Target**: Aim for 1000+ samples to reduce overfitting and improve generalization.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Conclusion\n",
-    "\n",
-    "**Random Forest serves as a robust, interpretable, ensemble-based course recommendation model** that balances complexity and transparency. While its top-1 accuracy (~5–10%) may appear low, this is **expected behavior** in multiclass classification with 22 courses and reflects the ensemble's vote fragmentation mechanism.\n",
-    "\n",
-    "**Key Takeaways**:\n",
-    "\n",
-    "1. **Top-K Performance is Strong**: Random Forest achieves ~65–75% Top-10 accuracy, making it practical for educational recommendations where students explore multiple options.\n",
-    "\n",
-    "2. **Feature Importance Provides Insights**: The model identifies Location, Career Goal, and Income as primary drivers of course choice, offering actionable guidance for educators.\n",
-    "\n",
-    "3. **Regularization Prevents Overfitting**: Hyperparameters like `max_depth` and `min_samples_split` balance training performance and generalization.\n",
-    "\n",
-    "4. **Complementary to Other Models**: Random Forest fills a niche between simpler linear models (Logistic Regression) and advanced boosting methods (XGBoost), providing a baseline for comparison.\n",
-    "\n",
-    "5. **Production-Ready with Improvements**: With hyperparameter tuning, feature engineering, and SHAP explainability, Random Forest can serve as a reliable component in a hybrid recommendation system.\n",
-    "\n",
-    "**Random Forest successfully demonstrates that ensemble methods can deliver meaningful course recommendations even with modest datasets, provided that evaluation focuses on Top-K metrics and interpretability rather than top-1 accuracy alone.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a59fcd21",
    "metadata": {},
    "source": [
-    "## 18. Simple Justification for Project Reports\n",
+    "## Justification for Project Reports\n",
     "\n",
-    "### Why Random Forest Shows Distributed Probabilities (Short Version)\n",
+    "### Why Random Forest Shows Distributed Probabilities\n",
     "\n",
     "**Random Forest is an ensemble of 200 decision trees** that vote on course predictions. Each tree trains on a random subset of students and features, leading to diverse predictions. When these votes are aggregated across 22 courses, **probabilities naturally spread across multiple courses** rather than concentrating on one dominant choice.\n",
     "\n",
