feat: Ui update with the some modification

--- a/backend/NoteBook/KNN.ipynb
+++ b/backend/NoteBook/KNN.ipynb
@@ -114,17 +114,7 @@
     "4. Rank courses by:\n",
     "   - Simple voting (frequency count)\n",
     "   - Distance-weighted voting (closer neighbors have more influence)\n",
-    "   - Confidence scoring based on neighbor agreement\n",
-    "\n",
-    "### Key Differences from XGBoost\n",
-    "\n",
-    "| Aspect | XGBoost | KNN |\n",
-    "|--------|---------|-----|\n",
-    "| Learning Type | Model-based (builds trees) | Instance-based (stores examples) |\n",
-    "| Prediction | Rule-based decision paths | Similarity to neighbors |\n",
-    "| Interpretability | Feature importance, SHAP | Show actual similar students |\n",
-    "| Scalability | Handles large datasets well | Slower with large datasets |\n",
-    "| Best Use Case | Pattern learning across data | Finding similar cases |"
+    "   - Confidence scoring based on neighbor agreement"
    ]
   },
   {
@@ -854,7 +844,7 @@
    "id": "3f8a653d",
    "metadata": {},
    "source": [
-    "## 📊 9.5. Comprehensive Model Evaluation\n",
+    "## 📊 10. Comprehensive Model Evaluation\n",
     "\n",
     "### Evaluation Metrics for Multi-Class Classification\n",
     "\n",
